# seaclaw

./: .clang-tidy  .codecov.yml  .editorconfig  .env.example  .gitignore  .lighthouserc-dashboard.json  .lighthouserc.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT_STATUS.md  README.md  SECURITY.md  STUBS.md  benchmark-competitive.json  ci.sh  config.example.json  escalate.md  flake.nix  install.ps1  install.sh  justfile  package.json
.claude/: settings.json  settings.local.json.example
.devcontainer/: devcontainer.json
.githooks/: commit-msg  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
Formula/: README.md  human.rb  seaclaw.rb
bld/: CTestTestfile.cmake  Makefile
cmake/: wasm_sources.cmake
completions/: _human  _seaclaw  human.bash  seaclaw.bash
data/: eval_blinded_ab.json  eval_multiturn.json  eval_per_contact.json  eval_redteam_persona.json  training_history.json
design-tokens/: 3d.tokens.json  CLAUDE.md  ambient.tokens.json  base.tokens.json  breakpoints.tokens.json  build.ts  check-drift.sh  components.tokens.json  data-viz.tokens.json  dynamic-color-lib.ts  dynamic-color.ts  elevation.tokens.json  generate-docs.ts  glass.tokens.json  motion.tokens.json  opacity.tokens.json  package-lock.json  package.json  semantic.tokens.json  spatial.tokens.json  sync-tokens-studio.ts  typography.tokens.json
docs/: AGENT_SOTA_ASSESSMENT.md  CONCEPT_INDEX.md  INTELLIGENCE_AUDIT.md  PRUNABLE_MODULES.md  SECURITY-AUDIT-BTH-2025.md  SOTA_BENCHMARK.md  audit-phase3-superhuman-memory.md  blue-palette-comparison.html  brand-color-wheel.html  competitive-benchmarks-latest.md  competitive-benchmarks.md  components.md  cross-platform-ci-readiness.md  data-customization.md  design-strategy.md  design-system-demo.html  design-system-explorer.html  design-token-audit-report.md  design-tokens-reference.json  design-tokens.md  error-codes.md  getting-started.md  icon-inventory.md  migration-from-openclaw.md  ml-audit-report.md  ml-subsystem-audit-2026-03.md  motion-design.md  phase6-privacy-audit.md  platform-support.md  quality-scorecard.md  quiet-mastery-moodboard.html  silent-failures-audit.md  sqlite-audit-report.md  streaming-voice.md  tokens-studio.json  tokens.json  tokens.ts  ux-patterns.md  visual-standards.md  voice-clone-setup.md
eval/: sample_suite.json
eval_suites/: MANIFEST.md  adversarial.json  adversarial_turing.json  anti_sycophancy.json  capability_edges.json  coding_basic.json  companion_safety.json  fidelity.json  hula_orchestration.json  human_likeness.json  humor_engine.json  inner_thoughts.json  intelligence.json  longitudinal.json  memory.json  multi_turn.json  reasoning.json  reasoning_basic.json  social.json  temporal_reasoning.json  tool_capability.json  tool_use.json  tool_use_basic.json  trust_repair.json
examples/: README.md  hula_arg_refs.json  hula_loop_retry.json  hula_minimal.json  hula_parallel_fetch.json  hula_research_pipeline.json
fuzz/: CLAUDE.md  README.md  fuzz_adaptive_rag.c  fuzz_compaction_overflow.c  fuzz_contact_phone.c  fuzz_control_protocol.c  fuzz_ensemble_rerank.c  fuzz_hook_injection.c  fuzz_http_parse.c  fuzz_imessage_attributed_body.c  fuzz_instruction_discovery.c  fuzz_mcp_json_rpc.c  fuzz_memory_tiers.c  fuzz_normalize.c  fuzz_openai_compat.c  fuzz_prm.c  fuzz_prompt_injection.c  fuzz_query_param.c  fuzz_self_rag.c  fuzz_session_deserialization.c  fuzz_sse.c  fuzz_twilio_webhook.c  fuzz_visual_grounding.c
human-skills/: REGISTRY.md  SKILL_FORMAT.md  STUBS.md
npm/: README.md  install.js  package.json
personas/: default.json  wealth_advisor.json
resources/: Info.plist
schemas/: hula-program.schema.json
scripts/: adversarial-eval-harness.py  agent-preflight.sh  ane-gpu-bridge.py  audit-component-quality.sh  audit-fleet.sh  augment_training_data.py  bench-all-backends.py  benchmark-competitive.sh  benchmark.sh  build-deb.sh  calendar_query.applescript  capture_session.py  check-competitive-thresholds.sh  check-doc-index.sh  check-docs-frontmatter.sh  check-docs-relative-links.sh  check-human-skills-frontmatter.sh  check-metrics-drift.sh  check-standards-drift.sh  check-terminology.sh  check-token-consistency.sh  check-untested.sh  check.sh  check_docs_relative_links.py  check_markdown_relative_links.py  com.seaclaw.service.plist  compare-benchmarks.sh  convo-trainer.py  daily_feed_scrape.sh  deploy-bth.sh  deploy.sh  doc-fleet.sh  doc-stats.sh  e2e-imessage-humanness.sh  e2e-live.sh  e2e-media-imessage.sh  e2e-test.sh  e2e-voice-stt-gateway.mjs  e2e-voice-stt.sh  embed-data.sh  (+78 more)
sdk/: README.md
sdk/examples/weather/: CMakeLists.txt  weather_tool.c  weather_tool.h
sdk/templates/channel/: CMakeLists.txt  my_channel.c  my_channel.h
sdk/templates/provider/: CMakeLists.txt  my_provider.c  my_provider.h
sdk/templates/tool/: CMakeLists.txt  my_tool.c  my_tool.h
seaclaw/: REGISTRY.md  SKILL_FORMAT.md  STUBS.md
security-skills/: COMPLETION_SUMMARY.md  INDEX.md  README.md
skill-registry/: registry.json
src/: a2a.c  auth.c  bootstrap.c  bus.c  capabilities.c  channel_adapters.c  channel_catalog.c  channel_loop.c  cli_commands.c  config.c  config_getters.c  config_internal.h  config_merge.c  config_migrate.c  config_mutator.c  config_parse.c  config_parse_agent.c  config_parse_behavior.c  config_parse_channels.c  config_parse_internal.h  config_parse_providers.c  config_serialize.c  config_types.c  config_validate.c  cost.c  cron.c  crontab.c  daemon.c  daemon_cron.c  daemon_lifecycle.c  daemon_proactive.c  daemon_routing.c  doctor.c  doctor_fix.c  eval.c  eval_benchmarks.c  eval_dashboard.c  eval_judge.c  hardware.c  health.c  (+40 more)
tests/: CLAUDE.md  test_a2a.c  test_ab_response.c  test_adaptive_rag.c  test_adversarial.c  test_adversarial_concurrency.c  test_adversarial_detect.c  test_adversarial_dos_protocol.c  test_adversarial_injection.c  test_adversarial_integration.c  test_adversarial_memory_safety.c  test_agent_communication.c  test_agent_definition.c  test_agent_git.c  (+392 more)
(+2256 files in other folders)
